--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,40 @@
 @import url("https://fonts.googleapis.com/css?family=Ubuntu");
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+* { margin: 0; padding: 0; box-sizing: border-box; }
 
-ul, li {
-  text-decoration: none;
-  list-style: none;
-}
+ul, li { text-decoration: none; list-style: none; }
 
-body {
-  background-color: #276FBF;
-  color: #F6F4F3;
-  font-family: 'Ubuntu', sans-serif;
-}
+body { background-color: #276FBF; color: #F6F4F3; font-family: 'Ubuntu', sans-serif; }
 
-button {
-  cursor: pointer;
-  color: #F6F4F3;
-  background-color: transparent;
-  border: 2px dashed #F03A47;
-  font-size: 1.2em;
-}
+button { cursor: pointer; color: #F6F4F3; background-color: transparent; border: 2px dashed #F03A47; font-size: 1.2em; }
 
-button:focus {
-  border: 2px dashed #F03A47;
-}
+button:focus { border: 2px dashed #F03A47; }
 
-.container-fluid {
-  margin: 0 auto;
-  width: 100%;
-}
+.container-fluid { margin: 0 auto; width: 100%; }
 
-.container {
-  margin: 0 auto;
-  max-width: 1200px;
-}
+.container { margin: 0 auto; max-width: 1200px; }
 
-.column-card-list {
-  min-height: 200px;
-  min-width: 200px;
-}
+.column-card-list { min-height: 200px; min-width: 200px; }
 
-.kanban .grid .board .board-header {
-  background-color: #183059;
-  color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100px;
-  width: 100%;
-}
+.kanban .grid .board .board-header { background-color: #183059; color: #fff; display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-pack: distribute; justify-content: space-around; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100px; width: 100%; }
 
-.kanban .grid .board .board-header h1 {
-  font-size: 2.5em;
-  border-bottom: 2px dashed #F03A47;
-}
+.kanban .grid .board .board-header h1 { font-size: 2.5em; border-bottom: 2px dashed #F03A47; }
 
-.kanban .grid .board .board-header .create-column {
-  width: 200px;
-  height: 50px;
-}
+.kanban .grid .board .board-header .create-column { width: 200px; height: 50px; }
 
-.kanban .grid .board .column-container {
-  background-color: #276FBF;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
+.kanban .grid .board .column-container { background-color: #276FBF; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: space-evenly; -ms-flex-pack: space-evenly; justify-content: space-evenly; -ms-flex-wrap: wrap; flex-wrap: wrap; }
 
-.kanban .grid .board .column-container .column {
-  border-radius: 6px;
-  background-color: #183059;
-  margin: 10px;
-  min-width: 350px;
-  min-height: 410px;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4);
-  position: relative;
-}
+.kanban .grid .board .column-container .column { border-radius: 6px; background-color: #183059; margin: 10px; min-width: 350px; min-height: 410px; box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.4); position: relative; }
 
-.kanban .grid .board .column-container .column .column-title {
-  font-size: 2em;
-  text-align: center;
-  padding: 15px;
-  border-bottom: 3px solid #276FBF;
-}
+.kanban .grid .board .column-container .column .column-title { font-size: 2em; text-align: center; padding: 15px; border-bottom: 3px solid #276FBF; }
 
-.kanban .grid .board .column-container .column > .btn-delete {
-  width: 20px;
-  height: 20px;
-  border: none;
-  background-color: transparent;
-  line-height: 10px;
-  position: absolute;
-  top: 2px;
-  right: 2px;
-}
+.kanban .grid .board .column-container .column > .btn-delete { width: 20px; height: 20px; border: none; background-color: transparent; line-height: 10px; position: absolute; top: 2px; right: 2px; }
 
-.kanban .grid .board .column-container .column .add-card {
-  display: block;
-  width: 330px;
-  height: 50px;
-  margin: 10px;
-  text-align: center;
-}
+.kanban .grid .board .column-container .column .add-card { display: block; width: 330px; height: 50px; margin: 10px; text-align: center; }
 
-.kanban .grid .board .column-container .column .card {
-  background-color: #183059;
-  margin: 10px auto;
-  border: 3px solid #276FBF;
-  border-radius: 6px;
-  min-height: 80px;
-  width: 330px;
-}
+.kanban .grid .board .column-container .column .card { background-color: #183059; margin: 10px auto; border: 3px solid #276FBF; border-radius: 6px; min-height: 80px; width: 330px; }
 
-.kanban .grid .board .column-container .column .card .card-description {
-  padding: 10px;
-  font-size: 1.1em;
-}
+.kanban .grid .board .column-container .column .card .card-description { padding: 10px; font-size: 1.1em; }
 
-.kanban .grid .board .column-container .column .card button {
-  float: right;
-  width: 20px;
-  height: 20px;
-  line-height: 10px;
-  background-color: transparent;
-  border: none;
-}
+.kanban .grid .board .column-container .column .card button { float: right; width: 20px; height: 20px; line-height: 10px; background-color: transparent; border: none; }
 
-.kanban .grid .board .column-container .column .card .card-desctiption {
-  width: 100%;
-  height: 100%;
-  padding: 5px;
-}
-/*# sourceMappingURL=style.css.map */
+.kanban .grid .board .column-container .column .card .card-desctiption { width: 100%; height: 100%; padding: 5px; }
